// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropSpot should be rendered correctly 1`] = `
<div
  className="root"
>
  <div
    className="dropArea"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="root size-24 background-none spacing-6 container align-items-center"
    >
      <div
        className="container uui-icon uui-enabled root icon-container-color-blue"
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#shape.svg"
          />
        </svg>
      </div>
      <div
        className="root font-sans-semibold text-color-gray80 line-height-24 font-size-14 v-padding-0 container"
      >
         Drop files to attach or 
      </div>
      <div>
        <input
          className="fileInput"
          multiple={true}
          onChange={[Function]}
          type="file"
        />
        <div
          className="root font-sans-semibold text-color-gray80 line-height-24 font-size-14 v-padding-0 container"
        >
          <a
            className="container uui-anchor uui-enabled -clickable link"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            browse
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropSpot should be rendered correctly with props 1`] = `
<div
  className="root"
>
  <div
    className="dropArea"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <div
      className="root size-24 background-none spacing-6 container align-items-center"
    >
      <div
        className="container uui-icon uui-enabled root icon-container-color-blue"
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#shape.svg"
          />
        </svg>
      </div>
      <div
        className="root font-sans-semibold text-color-gray80 line-height-24 font-size-14 v-padding-0 container"
      >
         Drop files to attach or 
      </div>
      <div>
        <input
          className="fileInput"
          multiple={true}
          onChange={[Function]}
          type="file"
        />
        <div
          className="root font-sans-semibold text-color-gray80 line-height-24 font-size-14 v-padding-0 container"
        >
          <a
            className="container uui-anchor uui-enabled -clickable link"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            browse
          </a>
        </div>
      </div>
    </div>
    <div
      className="root font-sans text-color-gray60 line-height-24 font-size-14 v-padding-0 container"
    >
      Test info
    </div>
  </div>
</div>
`;
